 - Integrated patches and bug fixes (few NPEs) detected by FindBugs. Contributed by Piyush Purang.
 - Fixed Handler which didn't copy the "redirectRef" from the Result instance returned by post/put/delete
   methods on Resource. Reported by Chris Grindstaff.
 - Fixed NRE Container which didn't start the attached applications. Reported by Sumit Lohia.
  
[API changes]
 - Moved org.restlet.data.Result to org.restlet.resource.Result (deprecation used).
 - Replaced ConnectorService.get*Protocols() methods by just getClientProtocols() and getServerProtocols().
 - Refactored the TunnelService a bit and added better Javadocs.
 - DateUtils formats are lists now instead of arrays. Trying to modify system set dates will yield 
   UnsupportedOperationException. Piyush Purang.
 - Handler now supports dynamic dispatching to handle*() methods based on the request's method name. Only common 
   methods are statically provided (handleGet/Head/Post/Put/Delete). handleMove/Copy/Options/Trace are removed 
   from base Handler class (their default implementation did nothing useful anyway).
 - Renamed Form.getWebForm() into getWebRepresentation() to make space for a future getMultiPartRepresentation().

[Enhancements] 
 - HTTP calls now try to use the channel aspect of a representation before its stream aspect. 
   Suggested by Lars Heuer.
 - Added source path to JSON external plugin. Suggested by Chris Grindstaff.
 - Added support for FindBugs in the Ant build script. Suggested by Piyush Purang.
 - Added "verify" target to build script to provide a shorter cycle for developpers. 
   Contributed by Piyush Purang.
 - Slightly updated Eclipse code template file. Please re-import it if possible.
 - NRE now checks that each application has the required connectors available when starting it.
 - Added org.restlet.util.ImmutableDate.
 - Shortened author's info by removing the URI.
 - Refactored all hashCode() and equals() methods in classes of org.restlet.data package. 